# Orchestrations

Codegen_RAG_GEN/: AGENT_OUTPUT_GUIDE.md  AlgoTodo_SelfMonitoring.md  WORKFLOW_DETAILED.md  pyproject.toml
Codegen_RAG_GEN/agent/: Db_helper.py  codingAgent.py  store_Db.py  workspace_agent.py
Langgraph_Notes/: LangChain_RAG_Documentation.docx  LangChain_RAG_Documentation_NoWatermark.docx  LangGraph_Agentic_AI_Documentation.docx  Vector_Search_ANN_IVF_HNSW.docx
React_Agent/: pyproject.toml
React_Agent/agent/: React_agent.py
coder-buddy/: .sample_env
