[project]
name = "coder-buddy"
version = "0.1.0"
description = "LangGraph workflow with Tavily + Groq"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-groq>=0.2.0",
  "tavily-python>=0.5.0",
  "python-dotenv>=1.0.1"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"